# osbdm_hpm5301_software

./: CMakeLists.txt
application/include/: usb_config.h
application/source/: main.c
board/include/: HSLink_Pro_expansion.h  board_custom.h
board/source/: HSLink_Pro_expansion.cpp  board_custom.c
linkfile/: flash_uf2.ld  flash_xip.ld
osbdm/: jtag_eppc.c
